build/log/idf_py_stderr_output_23498
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:89:70: error: expected expression before ')' token
   89 |                 signal_quality = (readBuffer[10]<< 8|readBuffer[11]<<);
      |                                                                      ^
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
